--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <h2>Limore Method By Supra Method : </h2>
     </section>
     <section>
-        <h2><a href="https://www.dropbox.com/scl/fi/6mxyzv4mzaost292v6rfh/LimoreSupra.exe?rlkey=6lpaqojtbd7k615bkhu17cfvi&dl=1" target="_blank">Downloads Launcher</a></h2>
+        <h2><a href="https://cdn.discordapp.com/attachments/1146790169060585502/1197123464096661514/SupraLimoreV1.1.exe?ex=65ba1f1b&is=65a7aa1b&hm=e8897fc219d1e2f7016745da4eaea9759390fafe1021688dcc58fc40675a35f7&" target="_blank">Downloads Launcher (Password On Discord)</a></h2>
     </section>
     <section>
         <h2>Latest Patches :</h2>
